--- a/src/WhetstoneNet/WhetstoneNetCore/WhetstoneNetCore.csproj
+++ b/src/WhetstoneNet/WhetstoneNetCore/WhetstoneNetCore.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
