Added results and updated doc

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,20 @@
             "stopAtEntry": false
         },
         {
+            "name": ".NET Core Launch (DhrystoneNetCore)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/src/WhetstoneNet/DhrystoneNetCore/bin/Debug/netcoreapp3.1/DhrystoneNetCore.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/src/WhetstoneNet/DhrystoneNetCore",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+
+        {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach",
