--- a/src/ResultsParser/EntityFx.Benchmark.DataAccess/EntityFx.Benchmark.DataAccess.csproj
+++ b/src/ResultsParser/EntityFx.Benchmark.DataAccess/EntityFx.Benchmark.DataAccess.csproj
@@ -6,12 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.4" />
-    <PackageReference Include="sqlite" Version="3.13.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ResultsParser\EntityFx.BenchmarkDb.Contracts\EntityFx.BenchmarkDb.Contracts.csproj" />
+    <ProjectReference Include="..\EntityFx.BenchmarkDb.Contracts\EntityFx.BenchmarkDb.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
