Cpu Info for Results Viewer added

--- a/src/ResultsParser/EntityFx.BenchmarkDb.Web/EntityFx.BenchmarkDb.Web.csproj
+++ b/src/ResultsParser/EntityFx.BenchmarkDb.Web/EntityFx.BenchmarkDb.Web.csproj
@@ -1,8 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="benchmarks.sqlite3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
@@ -14,9 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="benchmarks.sqlite3">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
 
 
