--- a/src/ResultsParser/EntityFx.Benchmark.DataAccess/EntityFx.Benchmark.DataAccess.csproj
+++ b/src/ResultsParser/EntityFx.Benchmark.DataAccess/EntityFx.Benchmark.DataAccess.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
+    <PackageReference Include="Dapper.SqlBuilder" Version="2.0.78" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.4" />
   </ItemGroup>
 
