Update README and do minor cleanup
 * Update README and explain how to compile benchmarks
 * Update CI workflow for C code
 * Remove workflow for .NET Code
 * Move HashTableBenchmark to separate folder

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -9,7 +9,7 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-    - name: configure
-      run: cd src && ./configure.sh
+      with:
+        submodules: 'recursive'
     - name: make
       run: cd src && ./make-amd64.sh
